Display All Projects

--- a/frontend/public/assets/css/style.css
+++ b/frontend/public/assets/css/style.css
@@ -2282,6 +2282,12 @@ form textarea {
 .scroll-top-to:hover {
   background: #333;
 }
+
+.card-horizontal {
+  display: flex;
+  flex: 1 1 auto;
+}
+
 @media (max-width: 768px) {
   .scroll-top-to {
     bottom: 15px;
